<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Three dad Parenting</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="hint_username_text">Please enter user number</string>
    <string name="hint_birthdate">Baby birthday</string>
    <string name="hint_identify_text">Please enter identify</string>
    <string name="hint_password_text">Please enter password</string>
    <string name="hint_name">Baby Name</string>
    <string name="hint_birthday">Birthday</string>
    <string name="hint_sex">Sex</string>
    <string name="hint_relationship">What is relationship with my baby</string>
    <string name="double_click_exit">Press again to exit！</string>
    <string name="equipment_linked">Connected Device</string>
    <string name="hint_register_phone_text">Please enter your register phone number</string>
    <string name="hint_set_password_text">Please enter password</string>
    <string name="person_info">Person Info</string>
    <string name="phone_verify">Register</string>
    <string name="next_step">Next step</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="register">New User Registration</string>
    <string name="identify">Identify</string>
    <string name="logout">Logout</string>
    <string name="find_password">Find Password</string>
    <string name="save">Save</string>
    <string name="title_activity_set_baby_info">SetBabyInfoActivity</string>
    <string name="title_activity_device_control">DeviceControlActivity</string>
    <string name="title_activity_device_scan">DeviceScanActivity</string>
    <string name="title_activity_set_password">Set password</string>
    <string name="title_activity_baby_health_tip">Baby Health Tip</string>
    <string name="title_activity_childcare_points">Childcare Points</string>
    <string name="title_activity_dp_sign">DP Sign</string>
    <string name="title_activity_science_tip">Science Tip</string>
    <string name="title_activity_grown_concern">Grown Concern</string>
    <string name="title_activity_parental_interaction">Parental Interaction</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="weight_info_text"> kg</string>
    <string name="height_info_text"> cm</string>
    <string name="milleage_info_text"> km</string>
    <string name="main_tab_height">HEIGHT</string>
    <string name="main_tab_weight">WEIGHT</string>
    <string name="main_tab_mileage">MILEAGE</string>
    <string name="input_user_name">Please input user name!</string>
    <string name="input_phone_number">Please input phone number!</string>
    <string name="input_legal_phone_number">Please input correct phone number!</string>
    <string name="input_password">Please input password!</string>
    <string name="input_identify">Please enter identify</string>
    <string name="my_device">My Device</string>
    <string name="my_info">My Info</string>
    <string name="my_service">Service</string>
    <string name="my_share">Share</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_fresh">Fresh</string>
    <string name="title_activity_user_weight_info">UserWeightInfo</string>
    <string name="title_activity_test">test</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weight_line_chart">weight line chart</string>
    <string name="mileage_line_chart">mileage line chart</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_phone_verify">PhoneVerifyActivity</string>
    <string name="pic_chooser_title">Choose A pic</string>
    <string name="pic_chooser_gallery">Gallery</string>
    <string name="pic_chooser_camera">Camera</string>
    <string name="pic_chooser_cancel">Cancel</string>
    <string name="title_activity_forget_password">Find password</string>
    <string name="title_activity_input_identify">Input identify</string>
    <string name="label_boy">Cool Prince</string>
    <string name="label_girl">Lovely Princess</string>
    <string name="title_baby_sex_info">Baby Sex</string>
    <string name="title_baby_birthday_info">Baby Birthday</string>
    <string name="label_baby_birthday">Baby Birthday</string>
    <string name="btn_baby_datepicker_cancel">Cancel</string>
    <string name="btn_baby_datepicker_confirm">Confirm</string>
    <string name="title_activity_input_weight">InputWeightActivity</string>
    <string name="title_activity_input_height">InputHeightActivity</string>
    <string name="title_activity_baby_info">BabyInfoActivity</string>
    <string name="title_activity_get_user_protocol">User Protocol</string>
    <string name="xliff_weight_num"><xliff:g id="weight">%1$3s</xliff:g></string>
    <string name="xliff_height_num"><xliff:g id="height">%1$3s</xliff:g></string>
    <string name="xliff_total_mileage_num"><xliff:g id="total_mileage">%1$3s</xliff:g> km</string>
    <string name="xliff_today_mileage_num"><xliff:g id="today_mileage">%1$3s</xliff:g> km</string>
    <string name="xliff_average_speed_num"><xliff:g id="average_speed">%1$3s</xliff:g> km/h</string>
    <string name="xliff_total_mileage_fragment_num">Total mileage : <xliff:g id="total_mileage">%1$3s</xliff:g> km</string>
    <string name="xliff_today_mileage_fragment_num">Mileage today : <xliff:g id="today_mileage">%1$3s</xliff:g> km</string>
    <string name="xliff_average_speed_fragment_num">Average speed : <xliff:g id="average_speed">%1$3s</xliff:g> km/h</string>
    <string name="xliff_height_health_state">Normal height: <xliff:g id="height_health">%1$3s</xliff:g> cm</string>
    <string name="xliff_weight_health_state">Normal weight: <xliff:g id="weight_health">%1$3s</xliff:g> kg</string>
    <string name="xliff_standard_height_num">Standard : <xliff:g id="height">%1$3s</xliff:g> cm</string>
    <string name="xliff_standard_weight_num">Reference value : <xliff:g id="weight">%1$3s</xliff:g> kg</string>
    <string name="xliff_weight_service">Baby weight<xliff:g id="weight_service">%1$3s</xliff:g> kg,save？</string>
    <string name="label_date_year">yrs</string>
    <string name="label_date__month">mos</string>
    <string name="label_date_day">day</string>
    <string name="text_popwindow_menu_my_device">My Device</string>
    <string name="text_activity_title_device">My Device</string>
    <string name="app_device_text_bind">Bind Car</string>
    <string name="app_device_text_unbind">Unbind Car</string>
    <string name="app_device_text_check_firmware_version">Firmware version</string>
    <string name="app_device_text_current_electric">Current Electric</string>
    <string name="text_popwindow_menu_app_about">About</string>
    <string name="text_activity_title_app_about">About</string>
    <string name="app_about_text_check_version">Check Update</string>
    <string name="app_about_text_user_agreement">User Agreement</string>
    <string name="app_about_text_log_out">Log out</string>
    <string name="title_activity_tag_image_edit">TagImageEditActivity</string>
    <string name="text_activity_title_tag_image_edit">Edit Picture</string>
    <string name="input_tagimage_text">Input Tag Text</string>
    <string name="btn_tagimage_save">OK</string>
    <string name="title_activity_tagimage_show">Add Tag View</string>
    <string name="btn_tagimage_show_next">Next</string>
    <string name="btn_tagimage_show_share">Share</string>
    <string name="btn_tagimage_show_save">Save</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="text_toast_null_text">Please Input Text!</string>
    <string name="text_tag_image">Water Print</string>
    <string name="text_tag_babydata_text1">Baby:</string>
    <string name="text_tag_babydata_text_day">Day</string>
    <string name="text_tag_babydata_text_days">Days</string>
    <string name="text_toast_pic_had_been_saved">Save Already！</string>
    <string name="text_toast_pic_saved_successfully">Saved:</string>
    <string name="text_toast_pic_saved_failed">Saved Fail!</string>
    <string name="nodata">No Data</string>
    <string name="text_tag_input_dalog_title">Input Tag Text:</string>
    <string name="tag_edit_empty_toast_txt">Tag can\'t be null!</string>
    <string name="tag_edit_pic_handle_progress_txt">Undergonging!</string>
    <string name="tag_share_pic_handle_progress_txt">Undergoning Hard！</string>
    <string name="tag_edit_dialog_ok_button_txt">OK</string>
    <string name="tag_edit_dialog_cancel_button_txt">Cancel</string>
    <string name="text_toast_no_storage_permission">No Read Storage Permission！</string>
    <string name="tag_delete_dialog_text">Delete this tag?</string>
    <string name="tag_delete_dialog_ok">OK</string>
    <string name="tag_delete_dialog_cancel">Cancel</string>
    <string name="title_activity_version_update">VersionUpdateActivity</string>
    <string name="title_dialog_firmware_update">Firmware Update</string>
    <string name="message_dialog_firmware_update">There is a new firmware version,need to update?</string>
    <string name="message_dialog_firmware_no_update">It\'s already the latest version in your device,no need to update!</string>
    <string name="ok_button_dialog_firmware_update">OK</string>
    <string name="cancel_button_dialog_firmware_update">Cancel</string>
    <string name="text_activity_firmware_update_string">Firmware is Updating </string>
    <string name="text_activity_firmware_update_finished_string">Updated Successfully! </string>
    <string name="text_share_hegiht_description_text">my little <xliff:g>%s</xliff:g> has been <xliff:g>%s</xliff:g>cm!</string>
    <string name="text_share_wegiht_description_text">my little <xliff:g>%s</xliff:g> has been <xliff:g>%s</xliff:g>kg!</string>
    <string name="text_age_description_text">我的<xliff:g>%s</xliff:g>已经<xliff:g>%s</xliff:g>啦！</string>
    <string name="text_share_info_from_app">From 3Polomes Info</string>
    <string name="text_datepick_show_errortime_set">Date cannot be later than today！</string>
    <string name="text_share_no_data_description_text">There is no baby data！</string>
    <string name="music_title">Music Classify</string>
    <string name="baby_like">Baby Like</string>
    <string name="local_music">Local Music</string>
    <string name="host">Popular</string>
    <string name="recent_play">   Recent play    </string>
    <string name="story">Child Story</string>
    <string name="day">Date</string>
    <string name="input_day">Input Day</string>
    <string name="weight_text">Weight</string>
    <string name="cancle">Cancle</string>
    <string name="confirm">Confirm</string>
    <string name="name_change_dialog">Give your cart a name</string>
    <string name="input_weight">Please fill in the time and weight</string>
    <string name="height_text__">Height :</string>
    <string name="weight_text__">Weight :</string>
</resources>