<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.findtech.threePomelos.login.ForgetPasswordActivity">


    <EditText
        android:id="@+id/input_phone"
        android:layout_width="@dimen/x270"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_register_phone_text"
        android:textColorHint="@color/text_color_hint"
        android:layout_marginTop="@dimen/y30"
        android:background="@drawable/login_edit_bac"
        android:paddingLeft="15dp"
        android:textSize="@dimen/text_size_login"
        android:inputType="phone" />







    <LinearLayout
        android:id="@+id/sms_code"
        android:layout_width="@dimen/x270"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_below="@id/input_phone"
        android:layout_marginTop="@dimen/y10"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_edit_bac"
        android:weightSum="1">

        <EditText
            android:id="@+id/identify_num"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.8"
            android:paddingLeft="15dp"
            android:hint="@string/hint_identify_text"
            android:textColorHint="@color/text_color_hint"
            android:imeOptions="actionGo"
            android:background="@null"
            android:phoneNumber="true"
            android:textSize="@dimen/text_size_login"/>

        <TextView
            android:id="@+id/send_identify"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0.2"
            android:layout_marginLeft="@dimen/y5"
            android:layout_marginRight="@dimen/y5"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/login_button_selector"
            android:text="@string/identify"
            android:textColor="@color/white"
            android:textSize="10sp"/>

    </LinearLayout>

    <EditText
        android:id="@+id/input_password"
        android:layout_width="@dimen/x270"
        android:layout_height="50dp"
        android:hint="@string/hint_set_password_text"
        android:textColorHint="@color/text_color_hint"
        android:layout_below="@+id/sms_code"
        android:layout_marginTop="@dimen/y10"
        android:background="@drawable/login_edit_bac"
        android:layout_centerHorizontal="true"
        android:paddingLeft="15dp"
        android:textSize="@dimen/text_size_login"
        android:inputType="textPassword"


        />


    <Button
        android:id="@+id/next_step"
        android:layout_width="@dimen/x270"
        android:layout_height="50dp"
        android:background="@drawable/login_button_selector"
        android:layout_below="@id/input_password"
        android:text="@string/next_step"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/y90"
        />

</RelativeLayout>
