<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    android:orientation="vertical"
    tools:context="com.findtech.threePomelos.activity.InputWeightActivity">

    <!--<include-->
        <!--android:id="@+id/custom_actionbar"-->
        <!--layout="@layout/toolbar_layout" />-->

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="0.2"
                android:text="@string/weight_text"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:textColor="@color/text_color_input" />

            <EditText
                android:id="@+id/input_weight"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_weight="0.6"
                android:background="@null"
                android:gravity="right|center_vertical"
                android:layout_gravity="left"
                android:layout_marginRight="5dp"
                android:hint="@string/input_weight"
                android:cursorVisible="false"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:textColor="@color/edit_text_color"
                android:textColorHint="@color/text_color_hint"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:layout_gravity="center"
                android:text="@string/weight_info_text"
                android:textSize="16sp"
                android:textColor="@color/text_color_input" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@color/gray_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="0.2"
                android:text="@string/day"
                android:textSize="16sp"
                android:textColor="@color/text_color_input" />

            <TextView
                android:id="@+id/txt_weight_date_input"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_weight="0.6"
                android:background="@null"
                android:gravity="right|center_vertical"
                android:layout_marginRight="5dp"
                android:hint="@string/input_day"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textColor="@color/text_color_input"
                android:textColorHint="@color/text_color_hint"
                android:textSize="15sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/red_button_selector"
            android:text="@string/save"
            android:textSize="16sp"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>