<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/pop_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:background="@color/dialog_background_color"
    android:orientation="vertical"
    >



    <LinearLayout
        android:id="@+id/layout_button_pic_chooser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pic_chooser_title"
                android:textColor="@color/text_black_color"
                android:textSize="18dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/btn_take_photo"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:shadowRadius="1"
            android:gravity="center"
            android:textSize="18dp"
            android:background="@drawable/white_picchooser_button_selector"
            android:text="@string/pic_chooser_camera"
            android:textColor="@color/edit_text_color" />

        <TextView
            android:id="@+id/btn_pick_photo"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="12dip"
            android:shadowRadius="6"
            android:gravity="center"
            android:textSize="18dp"
            android:background="@drawable/white_picchooser_button_selector"
            android:text="@string/pic_chooser_gallery"
            android:textColor="@color/text_red_color" />

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="12dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="12dip"
            android:shadowRadius="0"
            android:gravity="center"
            android:textSize="18dp"
            android:background="@drawable/white_picchooser_button_selector"
            android:text="@string/pic_chooser_cancel"
            android:textColor="@color/text_gray_color" />

    </LinearLayout>


</RelativeLayout>
