<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="@dimen/x250"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bac"
        android:paddingTop="@dimen/x18"

        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:textSize="@dimen/text_size_title_seven"
        android:textColor="@color/text_color"
        android:text="@string/name_change_dialog"/>
    <EditText

        android:id="@+id/editText_weight"
        android:layout_width="@dimen/x160"
        android:padding="@dimen/y3"
        android:layout_height="@dimen/y25"
        android:layout_marginTop="@dimen/y16"
        android:textSize="@dimen/text_size_login"
        android:textColorHint="@color/divider_color"
        android:layout_gravity="center_horizontal"
        android:singleLine="true"
        android:maxLength="10"
        android:background="@drawable/register_button_selector"
        />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/y15"
            android:background="@color/six_e"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancle_button"
                android:layout_width="0dp"
                android:layout_height="@dimen/y30"
                android:layout_weight="1"
                android:textColor="#999999"
                android:gravity="center"
                android:text="@string/cancle"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/y3"
                android:background="@color/six_e"></View>

            <TextView
                android:id="@+id/confirm_button"
                android:layout_width="0dp"
                android:layout_height="@dimen/y30"
                android:layout_weight="1"
                android:textColor="@color/text_pink"
                android:gravity="center"
                android:text="@string/confirm"/>

        </LinearLayout>



    </LinearLayout>

</LinearLayout>